--- a/Gakuya/MainWindow.xaml
+++ b/Gakuya/MainWindow.xaml
@@ -1,6 +1,7 @@
-﻿<Window x:Class="gakuya.MainWindow"
+﻿<Window x:Class="Gakuya.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:properties="clr-namespace:Gakuya.Properties"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:gakuya"
@@ -20,108 +21,108 @@
                 <ColumnDefinition Width="auto"/>
             </Grid.ColumnDefinitions>
             <TextBox x:Name="voiceDir" Margin="30,0,5,5" Padding="5,5,5,5" Grid.Column="0" />
-            <Button x:Name="voiceDirButton" Margin="5,0,30,5" Padding="5,5,5,5" Content="参照" Grid.Column="1" Click="VoiceDirButton_Click"/>
+            <Button x:Name="voiceDirButton" Margin="5,0,30,5" Padding="5,5,5,5" Content="{x:Static properties:Resources.VoiceDirButton}" Grid.Column="1" Click="VoiceDirButton_Click"/>
         </Grid>
         <TabControl x:Name="tabControl" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="1">
-            <TabItem Header="File Check" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <TabItem Header="{x:Static properties:Resources.TabFileCheck}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                 <GroupBox Margin="5,5,5,5">
                     <GroupBox.Header>
-                        <CheckBox x:Name="fileCheck" Content="ファイルをチェックする" Checked="FileCheck_Checked" Unchecked="FileCheck_Unchecked"/>
+                        <CheckBox x:Name="fileCheck" Content="{x:Static properties:Resources.FileCheck}" Checked="FileCheck_Checked" Unchecked="FileCheck_Unchecked"/>
                     </GroupBox.Header>
                     <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Name="checkFileGroup" IsEnabled="False">
-                        <GroupBox x:Name="fileCheckBox" Header="基本ファイル"  Height="auto">
+                        <GroupBox x:Name="fileCheckBox" Header="{x:Static properties:Resources.FileCheckBox}"  Height="auto">
                             <StackPanel Margin="20,5,5,5" VerticalAlignment="Stretch">
-                                <CheckBox x:Name="checkOto" Content="原音設定ファイルのチェック" Margin="5,5,5,5" Checked="CheckOto_Checked" Unchecked="CheckOto_Unchecked"/>
-                                <CheckBox x:Name="checkRead" Content="$readを削除" Margin="5,5,5,5" Checked="CheckRead_Checked" Unchecked="CheckRead_Unchecked"/>
-                                <CheckBox x:Name="checkUspec" Content="*.uspecを削除" Margin="5,5,5,5" Checked="CheckUspec_Checked" Unchecked="CheckUspec_Unchecked"/>
+                                <CheckBox x:Name="checkOto" Content="{x:Static properties:Resources.CheckOto}" Margin="5,5,5,5" Checked="CheckOto_Checked" Unchecked="CheckOto_Unchecked"/>
+                                <CheckBox x:Name="checkRead" Content="{x:Static properties:Resources.CheckRead}" Margin="5,5,5,5" Checked="CheckRead_Checked" Unchecked="CheckRead_Unchecked"/>
+                                <CheckBox x:Name="checkUspec" Content="{x:Static properties:Resources.CheckUspec}" Margin="5,5,5,5" Checked="CheckUspec_Checked" Unchecked="CheckUspec_Unchecked"/>
                             </StackPanel>
 
                         </GroupBox>
-                        <GroupBox x:Name="frqCheckBox" Header="周波数表ファイル"  Height="auto">
+                        <GroupBox x:Name="frqCheckBox" Header="{x:Static properties:Resources.FrqCheckBox}"  Height="auto">
                             <StackPanel Margin="20,5,5,5" VerticalAlignment="Stretch">
-                                <CheckBox x:Name="checkFrq" Content="*.frqがない場合警告" Margin="5" Checked="CheckFrq_Checked" Unchecked="CheckFrq_Unchecked"/>
-                                <CheckBox x:Name="checkPmk" Content="*.pmkを削除" Margin="5,5,5,5" Checked="CheckPmk_Checked" Unchecked="CheckPmk_Unchecked"/>
-                                <CheckBox x:Name="checkFrc" Content="*.frcを削除" Margin="5" Checked="CheckFrc_Checked" Unchecked="CheckFrc_Unchecked"/>
-                                <CheckBox x:Name="checkVs4ufrq" Content="*.vs4ufrqを削除" Margin="5,5,5,5" Checked="CheckVs4ufrq_Checked" Unchecked="CheckVs4ufrq_Unchecked"/>
-                                <CheckBox x:Name="checkDio" Content="*.dio,*.star,*.platinumを削除" Margin="5,5,5,5" Checked="CheckDio_Checked" Unchecked="CheckDio_Unchecked"/>
-                                <CheckBox x:Name="checkLlsm" Content="*.llsmを削除" Margin="5,5,5,5" Checked="CheckLlsm_Checked" Unchecked="CheckLlsm_Unchecked"/>
-                                <CheckBox x:Name="checkMrq" Content="*.mrqを削除" Margin="5,5,5,5" Checked="CheckMrq_Checked" Unchecked="CheckMrq_Unchecked"/>
-                                <Button x:Name="frqAuto" Content="推奨設定" Margin="5,5,5,5" Padding="5,5,5,5" Click="FrqAuto_Click"/>
+                                <CheckBox x:Name="checkFrq" Content="{x:Static properties:Resources.CheckFrq}" Margin="5" Checked="CheckFrq_Checked" Unchecked="CheckFrq_Unchecked"/>
+                                <CheckBox x:Name="checkPmk" Content="{x:Static properties:Resources.CheckPmk}" Margin="5,5,5,5" Checked="CheckPmk_Checked" Unchecked="CheckPmk_Unchecked"/>
+                                <CheckBox x:Name="checkFrc" Content="{x:Static properties:Resources.CheckFrc}" Margin="5" Checked="CheckFrc_Checked" Unchecked="CheckFrc_Unchecked"/>
+                                <CheckBox x:Name="checkVs4ufrq" Content="{x:Static properties:Resources.CheckVs4ufrq}" Margin="5,5,5,5" Checked="CheckVs4ufrq_Checked" Unchecked="CheckVs4ufrq_Unchecked"/>
+                                <CheckBox x:Name="checkDio" Content="{x:Static properties:Resources.CheckDio}" Margin="5,5,5,5" Checked="CheckDio_Checked" Unchecked="CheckDio_Unchecked"/>
+                                <CheckBox x:Name="checkLlsm" Content="{x:Static properties:Resources.CheckLlsm}" Margin="5,5,5,5" Checked="CheckLlsm_Checked" Unchecked="CheckLlsm_Unchecked"/>
+                                <CheckBox x:Name="checkMrq" Content="{x:Static properties:Resources.CheckMrq}" Margin="5,5,5,5" Checked="CheckMrq_Checked" Unchecked="CheckMrq_Unchecked"/>
+                                <Button x:Name="frqAuto" Content="{x:Static properties:Resources.FrqAuto}" Margin="5,5,5,5" Padding="5,5,5,5" Click="FrqAuto_Click"/>
 
                             </StackPanel>
 
                         </GroupBox>
-                        <GroupBox x:Name="wavCheckBox" Header="wavファイル"  Height="auto">
+                        <GroupBox x:Name="wavCheckBox" Header="{x:Static properties:Resources.WavCheckBox}"  Height="auto">
                             <StackPanel Margin="20,5,5,5" VerticalAlignment="Stretch">
-                                <CheckBox x:Name="checkWavStereo" Content="ステレオ音源を警告する" Margin="5,5,5,5" Checked="CheckWavStereo_Checked" Unchecked="CheckWavStereo_UnChecked"/>
-                                <CheckBox x:Name="checkWavSample" Content="サンプリングレートが44100以外の場合警告する" Margin="5,5,5,5" Checked="CheckWavSample_Checked" Unchecked="CheckWavSample_UnChecked"/>
+                                <CheckBox x:Name="checkWavStereo" Content="{x:Static properties:Resources.CheckWavStereo}" Margin="5,5,5,5" Checked="CheckWavStereo_Checked" Unchecked="CheckWavStereo_UnChecked"/>
+                                <CheckBox x:Name="checkWavSample" Content="{x:Static properties:Resources.CheckWavSample}" Margin="5,5,5,5" Checked="CheckWavSample_Checked" Unchecked="CheckWavSample_UnChecked"/>
                             </StackPanel>
 
                         </GroupBox>
                     </StackPanel>
                 </GroupBox>
             </TabItem>
-            <TabItem Header="Character" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <TabItem Header="{x:Static properties:Resources.TabCharacter}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                 <GroupBox Margin="5,5,5,5">
                     <GroupBox.Header>
-                        <CheckBox x:Name="characterCheck" Content="character.txtを編集する" Checked="CharacterCheck_Checked" Unchecked="CharacterCheck_UnChecked"/>
+                        <CheckBox x:Name="characterCheck" Content="{x:Static properties:Resources.CharacterCheck}" Checked="CharacterCheck_Checked" Unchecked="CharacterCheck_UnChecked"/>
                     </GroupBox.Header>
                     <StackPanel x:Name="characterBox" IsEnabled="False">
-                        <Label x:Name="characterNameLabel" Content="キャラクター名(name)" Margin="5,5,30,0" Padding="5,5,5,5"/>
+                        <Label x:Name="characterNameLabel" Content="{x:Static properties:Resources.CharacterNameLabel}" Margin="5,5,30,0" Padding="5,5,5,5"/>
                         <TextBox x:Name="characterName" Margin="30,0,30,5"></TextBox>
-                        <Label x:Name="characterVersionLabel" Content="バージョン(version)" Margin="5,5,30,0" Padding="5,5,5,5"/>
+                        <Label x:Name="characterVersionLabel" Content="{x:Static properties:Resources.CharacterVersionLabel}" Margin="5,5,30,0" Padding="5,5,5,5"/>
                         <TextBox x:Name="characterVersion" Margin="30,0,30,5"></TextBox>
-                        <Label x:Name="characterImageLabel" Content="画像ファイル(image)" Margin="5,5,30,0" Padding="5,5,5,5"/>
+                        <Label x:Name="characterImageLabel" Content="{x:Static properties:Resources.CharacterImageLabel}" Margin="5,5,30,0" Padding="5,5,5,5"/>
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="auto"/>
                             </Grid.ColumnDefinitions>
                             <TextBox x:Name="characterImage" Margin="30,0,5,5" Padding="5,5,5,5" Grid.Column="0" />
-                            <Button x:Name="characterImageButton" Margin="5,0,30,5" Padding="5,5,5,5" Content="参照" Grid.Column="1" Click="CharacterImageButton_Click"/>
+                            <Button x:Name="characterImageButton" Margin="5,0,30,5" Padding="5,5,5,5" Content="{x:Static properties:Resources.CharacterImageButton}" Grid.Column="1" Click="CharacterImageButton_Click"/>
                         </Grid>
-                        <Label x:Name="characterSampleLabel" Content="サンプルボイス(sample)" Margin="5,5,30,0"/>
+                        <Label x:Name="characterSampleLabel" Content="{x:Static properties:Resources.CharacterSampleLabel}" Margin="5,5,30,0"/>
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="auto"/>
                             </Grid.ColumnDefinitions>
                             <TextBox x:Name="characterSample" Margin="30,0,5,5" Padding="5,5,5,5" Grid.Column="0" />
-                            <Button x:Name="characterSampleButton" Margin="5,0,30,5" Padding="5,5,5,5" Content="参照" Grid.Column="1" Click="CharacterSampleButton_Click"/>
+                            <Button x:Name="characterSampleButton" Margin="5,0,30,5" Padding="5,5,5,5" Content="{x:Static properties:Resources.CharacterSampleButton}" Grid.Column="1" Click="CharacterSampleButton_Click"/>
                         </Grid>
-                        <Label x:Name="characterWebLabel" Content="webアドレス(web)" Margin="5,5,30,0"/>
+                        <Label x:Name="characterWebLabel" Content="{x:Static properties:Resources.CharacterWebLabel}" Margin="5,5,30,0"/>
                         <TextBox x:Name="characterWeb" Margin="30,0,30,5" Padding="5,5,5,5"></TextBox>
-                        <Label x:Name="characterAuthorLabel" Content="製作者(author)" Margin="5,5,30,0"/>
+                        <Label x:Name="characterAuthorLabel" Content="{x:Static properties:Resources.CharacterAuthorLabel}" Margin="5,5,30,0"/>
                         <TextBox x:Name="characterAuthor" Margin="30,0,30,5" Padding="5,5,5,5"></TextBox>
 
                     </StackPanel>
                 </GroupBox>
             </TabItem>
-            <TabItem Header="Read Me" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <TabItem Header="{x:Static properties:Resources.TabReadMe}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                 <GroupBox Margin="5,5,5,5">
                     <GroupBox.Header>
-                        <CheckBox x:Name="readMeCheck" Content="readme.txtを編集する" Checked="ReadMeCheck_Checked" Unchecked="ReadMeCheck_UnChecked"/>
+                        <CheckBox x:Name="readMeCheck" Content="{x:Static properties:Resources.ReadMeCheck}" Checked="ReadMeCheck_Checked" Unchecked="ReadMeCheck_UnChecked"/>
                     </GroupBox.Header>
                     <TextBox x:Name="readme" AcceptsReturn="True"  TextWrapping="Wrap" Margin="5,30,5,30" Padding="5,5,5,5" IsEnabled="False"/>
                 </GroupBox>
             </TabItem>
-            <TabItem Header="Install" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <TabItem Header="{x:Static properties:Resources.TabInstall}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                 <GroupBox Margin="5,5,5,5">
                     <GroupBox.Header>
-                        <CheckBox x:Name="isntallCheck" Content="install.txtを編集する" Checked="IsntallCheck_Checked" Unchecked="IsntallCheck_UnChecked"/>
+                        <CheckBox x:Name="isntallCheck" Content="{x:Static properties:Resources.InstallCheck}" Checked="IsntallCheck_Checked" Unchecked="IsntallCheck_UnChecked"/>
                     </GroupBox.Header>
                     <StackPanel x:Name="installBox" IsEnabled="False">
-                        <Label x:Name="installDirLabel" Content="インストール先ディレクトリ名(folder)" Margin="5,5,30,0"/>
+                        <Label x:Name="installDirLabel" Content="{x:Static properties:Resources.InstallDirLabel}" Margin="5,5,30,0"/>
                         <TextBox x:Name="installDir" Margin="30,0,30,5" Padding="5,5,5,5"></TextBox>
-                        <Label x:Name="installContentsDirLabel" Content="インストールしたいものが入っているフォルダ名(contentsdir)" Margin="5,5,30,0"/>
+                        <Label x:Name="installContentsDirLabel" Content="{x:Static properties:Resources.InstallContentsDirLabel}" Margin="5,5,30,0"/>
                         <TextBox x:Name="installContentsDir" Margin="30,0,30,5" Padding="5,5,5,5"></TextBox>
-                        <Label x:Name="installDescriptionLabel" Content="説明文など(description)" Margin="5,5,30,0"/>
+                        <Label x:Name="installDescriptionLabel" Content="{x:Static properties:Resources.InstallDescriptionLabel}" Margin="5,5,30,0"/>
                         <TextBox x:Name="installDescription" Margin="30,0,30,5" Padding="5,5,5,5"></TextBox>
-                        <CheckBox x:Name="makeUarCheck" Content="uarファイルも作成する" Margin="5,5,5,5" Checked="MakeUarCheck_Checked"/>
+                        <CheckBox x:Name="makeUarCheck" Content="{x:Static properties:Resources.MakeUarCheck}" Margin="5,5,5,5" Checked="MakeUarCheck_Checked"/>
                     </StackPanel>
                 </GroupBox>
             </TabItem>
-            <TabItem Header="Report" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Name="reportTab">
+            <TabItem Header="{x:Static properties:Resources.TabReport}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Name="reportTab">
                 <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                     <TextBox x:Name="report" TextWrapping="Wrap" Text="" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5,30,5,30"/>
 
@@ -129,8 +130,8 @@
             </TabItem>
         </TabControl>
         <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="2">
-            <Button x:Name="submitButton" Content="実行" Height="auto" HorizontalAlignment="Right" Margin="20,20,20,20" Padding="10,10,10,10" Click="SubmitButton_Click" IsEnabled="False"/>
-            <Button x:Name="cancelButton" Content="キャンセル" HorizontalAlignment="Right" Height="auto" Margin="20,20,20,20" Padding="10,10,10,10" Click="CancelButton_Click"/>
+            <Button x:Name="submitButton" Content="{x:Static properties:Resources.SubmitButton}" Height="auto" HorizontalAlignment="Right" Margin="20,20,20,20" Padding="10,10,10,10" Click="SubmitButton_Click" IsEnabled="False"/>
+            <Button x:Name="cancelButton" Content="{x:Static properties:Resources.CancelButton}" HorizontalAlignment="Right" Height="auto" Margin="20,20,20,20" Padding="10,10,10,10" Click="CancelButton_Click"/>
         </StackPanel>
 
     </Grid>
